// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <legend
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Label
          </legend>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(1, minmax(0, 1fr)); --ivy5ld1: repeat(1, minmax(0, 1fr)); --ivy5ld2: repeat(1, minmax(0, 1fr)); --ivy5ld3: repeat(1, minmax(0, 1fr)); --ivy5ld4: repeat(1, minmax(0, 1fr)); --ivy5ld5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_5_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_5_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_c_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_c_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly as a radio 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_2r_"
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <legend
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Label
          </legend>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(1, minmax(0, 1fr)); --ivy5ld1: repeat(1, minmax(0, 1fr)); --ivy5ld2: repeat(1, minmax(0, 1fr)); --ivy5ld3: repeat(1, minmax(0, 1fr)); --ivy5ld4: repeat(1, minmax(0, 1fr)); --ivy5ld5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="true"
              data-type="radio"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="styles__s0xyv0d styles_medium__bnlb224 styles__bnlb222"
                  data-checked="true"
                  data-invalid="true"
                >
                  <input
                    aria-disabled="false"
                    checked=""
                    class="styles__bnlb22a"
                    id="_r_30_"
                    name="radio"
                    tabindex="-1"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="styles__bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="styles__bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_30_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="true"
              data-type="radio"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="styles__s0xyv0d styles_medium__bnlb224 styles__bnlb222"
                  data-checked="false"
                  data-invalid="true"
                >
                  <input
                    aria-disabled="false"
                    class="styles__bnlb22a"
                    id="_r_38_"
                    name="radio"
                    tabindex="-1"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="styles__bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="styles__bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_38_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_2r_"
        role="status"
      >
        Error content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly required and showTick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
            >
              *
            </span>
          </div>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(1, minmax(0, 1fr)); --ivy5ld1: repeat(1, minmax(0, 1fr)); --ivy5ld2: repeat(1, minmax(0, 1fr)); --ivy5ld3: repeat(1, minmax(0, 1fr)); --ivy5ld4: repeat(1, minmax(0, 1fr)); --ivy5ld5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: inline; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_1s_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_1s_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: inline; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_23_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_23_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with direction multiple columns 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <legend
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Label
          </legend>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(2, minmax(0, 1fr)); --ivy5ld1: repeat(2, minmax(0, 1fr)); --ivy5ld2: repeat(2, minmax(0, 1fr)); --ivy5ld3: repeat(2, minmax(0, 1fr)); --ivy5ld4: repeat(2, minmax(0, 1fr)); --ivy5ld5: repeat(2, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_m_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_m_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_t_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_t_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_28_"
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <legend
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Label
          </legend>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(1, minmax(0, 1fr)); --ivy5ld1: repeat(1, minmax(0, 1fr)); --ivy5ld2: repeat(1, minmax(0, 1fr)); --ivy5ld3: repeat(1, minmax(0, 1fr)); --ivy5ld4: repeat(1, minmax(0, 1fr)); --ivy5ld5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="true"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="true"
                data-error="true"
              >
                <input
                  aria-checked="true"
                  aria-invalid="true"
                  checked=""
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_2d_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_2d_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="true"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="false"
                data-error="true"
              >
                <input
                  aria-checked="false"
                  aria-invalid="true"
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_2k_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_2k_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_28_"
        role="status"
      >
        Error content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_12_"
        class="styles__ziwsty0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <legend
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Label
          </legend>
          <div
            class="styles__78oem50 styles_gap_1rem_xxsmall__78oem52p"
            style="--ivy5ld0: repeat(1, minmax(0, 1fr)); --ivy5ld1: repeat(1, minmax(0, 1fr)); --ivy5ld2: repeat(1, minmax(0, 1fr)); --ivy5ld3: repeat(1, minmax(0, 1fr)); --ivy5ld4: repeat(1, minmax(0, 1fr)); --ivy5ld5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_17_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_17_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="styles__s0xyv00 styles_cursor_custom__s0xyv01 styles_image_none__s0xyv05 styles__s0xyv06 styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-type="checkbox"
              role="button"
              style="--_1o893js3: 1; --_1msl0go0: none; --_1msl0go1: inline; --_1msl0go2: 100%;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="styles__s0xyv0d styles_default__1pz5vwp1 styles__1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                  id="_r_1e_"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    checkbox
                  </title>
                  <g>
                    <rect
                      class="styles__1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="styles__1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                  style="--_1o893js3: 1;"
                >
                  <div
                    class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                  >
                    <label
                      class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                      for="_r_1e_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_12_"
        role="status"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
